--- a/modulo-4/projeto-labex/labex/package.json
+++ b/modulo-4/projeto-labex/labex/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
